[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g1-controller"
version = "0.1.0"
description = "Unitree G1 arm controller wrapper (LowCmd/LowState) with interpolation and safety limits"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "unitree-sdk2py",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["g1_controller*"]

